@@ -1,12 +1,3 @@
-
-              readwholedir`rw_files+{ptr}
-              libc.so.6`vfprintf+{ptr}
-              libc.so.6`vsprintf+{ptr}
-              libc.so.6`_IO_file_doallocate+{ptr}
-
-              readwholedir`rw_files+{ptr}
-              libc.so.6`vfprintf+{ptr}
-              libc.so.6`vsprintf+{ptr}
-              libc.so.6`_IO_file_doallocate+{ptr}
-
-
+              libc.so.6`scandir
+              readwholedir`is_regular_test_file
+              readwholedir`main
